<resources>
    <string name="app_name">AnimalAlmanacVersion1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to Animalmanac!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="submit">Submit</string>
    <string name="no_account_message">Don\'t have an account? Join us for free!</string>
    <string name="signup_header">Sign-up</string>
    <string name="username_hint1">Username</string>
    <string name="password_hint2">Password</string>
    <string name="confirm_password_hint">Re-Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="Back_to_Login">Back To Login</string>



</resources>